refactored, cleaned, renamed optChkTst